refactor: remove unused components and styles, update router and main app structure
- Deleted HelloWorld.vue, TheWelcome.vue, WelcomeItem.vue, and associated icon components.
- Cleaned up App.vue by removing header and navigation elements.
- Removed main.css and related styles.
- Updated router to an empty state.
- Removed HomeView.vue and AboutView.vue.
- Introduced KTerminal types and command structures.
- Added user and terminal configuration stores with persistence.
- Integrated Ant Design Vue and Pinia plugin for state management.
- Updated TypeScript configurations to include new type definitions.

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,7 +6,9 @@
     "cypress.config.*",
     "nightwatch.conf.*",
     "playwright.config.*",
-    "eslint.config.*"
+    "eslint.config.*",
+    "types/*.d.ts",
+    "src/types/*.d.ts"
   ],
   "compilerOptions": {
     "noEmit": true,
