--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "dependencies": {
     "ant-design-vue": "^4.2.6",
+    "getopts": "^2.3.0",
     "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.5.0",
+    "unplugin-vue-components": "^29.0.0",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
@@ -28,14 +31,22 @@
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/tsconfig": "^0.7.0",
+    "consola": "^3.4.2",
+    "crx": "^5.0.1",
     "eslint": "^9.31.0",
     "eslint-plugin-vue": "~10.3.0",
     "jiti": "^2.4.2",
     "npm-run-all2": "^8.0.4",
+    "ora": "^8.2.0",
     "prettier": "3.6.2",
     "typescript": "~5.8.0",
     "vite": "^7.0.6",
     "vite-plugin-vue-devtools": "^8.0.0",
     "vue-tsc": "^3.0.4"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "core-js"
+    ]
   }
 }
