--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,21 +1,8 @@
 {
-  "extends": "@tsconfig/node22/tsconfig.json",
-  "include": [
-    "vite.config.*",
-    "vitest.config.*",
-    "cypress.config.*",
-    "nightwatch.conf.*",
-    "playwright.config.*",
-    "eslint.config.*",
-    "types/*.d.ts",
-    "src/types/*.d.ts"
-  ],
+  "include": ["vite.config.ts"],
   "compilerOptions": {
-    "noEmit": true,
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
-
-    "module": "ESNext",
-    "moduleResolution": "Bundler",
-    "types": ["node"]
+    "composite": true,
+    "module": "esnext",
+    "moduleResolution": "node"
   }
 }
