--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
   },
   "dependencies": {
     "ant-design-vue": "^4.2.6",
+    "axios": "^1.12.2",
+    "dayjs": "^1.11.18",
     "getopts": "^2.3.0",
     "lodash": "^4.17.21",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.5.0",
-    "unplugin-vue-components": "^29.0.0",
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "xterm": "^5.3.0",
+    "xterm-addon-fit": "^0.8.0",
+    "xterm-addon-web-links": "^0.9.0"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
@@ -34,6 +38,7 @@
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/tsconfig": "^0.7.0",
     "consola": "^3.4.2",
+    "cross-env": "^10.0.0",
     "crx": "^5.0.1",
     "eslint": "^9.31.0",
     "eslint-plugin-vue": "~10.3.0",
@@ -42,6 +47,7 @@
     "ora": "^8.2.0",
     "prettier": "3.6.2",
     "typescript": "~5.8.0",
+    "unplugin-vue-components": "^29.0.0",
     "vite": "^7.0.6",
     "vite-plugin-vue-devtools": "^8.0.0",
     "vue-tsc": "^3.0.4"
